specs/001-typescript-to-zig-native/examples/valid/ternary.ts
let score = 7;
let label = score > 5 ? "high" : "low";
let bonus = score == 7 ? 3 : 1;

console.log(label);
console.log(bonus);
