specs/001-typescript-to-zig-native/examples/invalid/ternary-condition-type.ts
let label = "yes" ? 1 : 0;
console.log(label);
